- bootstrap styles removed; - header classes added.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": "q",
   "rules": {
     "indentation": 4,
     "string-quotes": "double",
